src/objects/Deal_Assessment_Cost__c.object
<CustomObject>
    <description>Other Cost</description>
    <fields>
        <fullName>Cost__c</fullName>
        <inlineHelpText>Other Cost</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Assessment__c</fullName>
        <label>Deal Assessment</label>
        <referenceTo>OCD_Deal_Assessment__c</referenceTo>
        <relationshipName>Deal_Assessment_Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <formula>CASESAFEID( Deal_Assessment__r.Quote__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Quantity__c *  Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type: One Time or Recurring</description>
        <inlineHelpText>One Time or Recurring</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Financial Assessment Cost</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Assessment Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Type_is_required_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(Type__c) )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is required field.</errorMessage>
    </validationRules>
</CustomObject>